Implemented darwini at the second stage