@@ -1,5 +1,6 @@
 package ldbc.snb.bteronhplus.structures;
 
+import org.apache.commons.math3.util.Pair;
 import org.jgrapht.graph.builder.GraphBuilder;
 
 import java.io.FileWriter;
@@ -15,12 +16,14 @@ public class BlockSampler {
     private long    numModels []         = null;
     private CommunityStreamer   streamer = null;
     private long    numCommunities       = 0L;
+    private Map<Integer,Long> counts     = null;
     
     
     
     public BlockSampler(Map<Integer, Long> counts,
                         CommunityStreamer streamer) {
         
+        this.counts = counts;
         this.streamer = streamer;
         this.numModels = new long[counts.keySet().size()];
         this.degreePerModelType = new long[counts.keySet().size()];
@@ -31,14 +34,13 @@ public class BlockSampler {
         if(modelId.length > 0) {
     
             long currentOffset = 0;
-    
             long totalExternalDegree = 0;
             int index = 0;
             for (Map.Entry<Integer, Long> entry : counts.entrySet()) {
                 Community model = streamer.getModel(entry.getKey());
                 modelId[index] = model.getId();
-                degreePerModelType[index] += (model.getExternalDegree()) * entry.getValue();
-                totalExternalDegree += (model.getExternalDegree()) * entry.getValue();
+                degreePerModelType[index] = model.getExternalDegree() * entry.getValue();
+                totalExternalDegree += degreePerModelType[index];
                 this.offsets.put(model.getId(), currentOffset);
                 this.numModels[index] = entry.getValue();
                 currentOffset += model.getSize() * entry.getValue();
@@ -51,7 +53,6 @@ public class BlockSampler {
             for (int i = 1; i < cumulativeProb.length; ++i) {
                 cumulativeProb[i] = cumulativeProb[i - 1] + degreePerModelType[i - 1] / (double) totalExternalDegree;
             }
-            
             
         }
         
@@ -87,26 +88,39 @@ public class BlockSampler {
         IOException {
         
         if(numModels.length > 1) {
-            ArrayList<Community> models = new ArrayList<Community>();
-            ArrayList<Long> modelsOffsets = new ArrayList<Long>();
+            ArrayList<Pair<Community, Long>> models = new ArrayList<Pair<Community,Long>>();
             for (int i = 0; i < numModels.length; ++i) {
                 Community model = streamer.getModel(modelId[i]);
                 long nextOffset = baseOffset + offsets.get(modelId[i]);
                 for (int j = 0; j < numModels[i]; ++j) {
                     if(model.getExternalDegree() > 0) {
-                        models.add(model);
-                        modelsOffsets.add(nextOffset);
+                        models.add(new Pair<Community,Long>(model, nextOffset));
                         nextOffset += models.size();
                     }
                 }
             }
+            
+            models.sort(new Comparator<Pair<Community,Long>>() {
+    
+                @Override
+                public int compare(Pair<Community, Long> pair1, Pair<Community, Long> pair2) {
+                    long externalDegree1 = pair1.getFirst().getExternalDegree();
+                    long externalDegree2 = pair2.getFirst().getExternalDegree();
+                    if(externalDegree1 > externalDegree2) return -1;
+                    if(externalDegree1 == externalDegree2) return 0;
+                    return 1;
+                }
+            });
+            
+            
+            
     
             if(models.size() > 0) {
-                Community root = models.get(0);
+                Community root = models.get(0).getFirst();
                 for (int i = 1; i < models.size(); ++i) {
-                    Community nextModel = models.get(i);
-                    long node1 = root.sampleNode(random, modelsOffsets.get(0));
-                    long node2 = nextModel.sampleNode(random, modelsOffsets.get(i));
+                    Community nextModel = models.get(i).getFirst();
+                    long node1 = root.sampleNode(random, models.get(0).getSecond());
+                    long node2 = nextModel.sampleNode(random, models.get(i).getSecond());
         
                     writer.write(node1 + "\t" + node2 + "\n");
                     if(node1 != node2)
@@ -140,7 +154,129 @@ public class BlockSampler {
         
     }
     
+    private class NodeStats{
+        public long nodeId;
+        public int numTriangles;
+        public int degree;
+        
+        public NodeStats(long nodeId, int numTriangles, int degree) {
+            this.nodeId = nodeId;
+            this.numTriangles = numTriangles;
+            this.degree = degree;
+        }
+    }
+    
+    class Bucket {
+        private List<NodeStats> nodes = new ArrayList<NodeStats>();
+        int nmax = Integer.MAX_VALUE;
+        
+        public boolean addNode(NodeStats node) {
+            nodes.add(node);
+            nmax = Math.min(node.degree + 1, nmax);
+            return nmax <= nodes.size();
+        }
+    
+        public List<NodeStats> getNodes() {
+            return nodes;
+        }
+    
+        public int getNmax() {
+            return nmax;
+        }
+        
+        public boolean merge(Bucket bucket) {
+            nmax = Math.min(nmax,bucket.getNmax());
+            nodes.addAll(bucket.getNodes());
+            return nmax <= nodes.size();
+        }
+    }
+    
+    
+    public long darwini(FileWriter writer,
+                        Random random,
+                        long offset) throws IOException {
+    
+        List<Bucket> filledBuckets = new ArrayList<Bucket>();
+        HashMap<Integer, Bucket> currentBuckets = new HashMap<Integer,Bucket>();
+        List<NodeStats>  nodes = new ArrayList<NodeStats>();
+        for(int i = 0; i < modelId.length; ++i ) {
+            Community model = streamer.getModel(modelId[i]);
+            long baseOffset = offset + offsets.get(modelId[i]);
+            for(int j = 0; j < numModels[i]; ++j) {
+                for(int k = 0; k < model.getExternalTriangles().size(); ++k) {
+                    int numTriangles = model.getExternalTriangles().get(k);
+                    if(numTriangles > 0) {
+                        int degree = model.getExcessDegree().get(k);
+                        nodes.add(new NodeStats(k + baseOffset, numTriangles, degree));
+                    }
+                }
+                baseOffset+=model.getSize();
+            }
+        }
+        
+        int index = 0;
+        for(NodeStats node : nodes) {
+            Bucket bucket = currentBuckets.get(node.numTriangles);
+            if(bucket == null) {
+                bucket = new Bucket();
+                currentBuckets.put(node.numTriangles, bucket);
+            }
+            
+            if(bucket.addNode(node)) {
+                currentBuckets.remove(node.numTriangles);
+                filledBuckets.add(bucket);
+            }
+    
+            index++;
+        }
+        
+        List<Bucket> toMergeBuckets = new ArrayList<Bucket>(currentBuckets.values());
+        toMergeBuckets.sort(new Comparator<Bucket>() {
+            @Override
+            public int compare(Bucket bucket1, Bucket bucket2) {
+                return bucket1.getNodes().size() - bucket2.getNodes().size();
+            }
+        });
+        
+        Bucket bucket = new Bucket();
+        
+        for(Bucket nextBucket : toMergeBuckets) {
+            if(bucket.merge(nextBucket)) {
+                filledBuckets.add(bucket);
+                bucket = new Bucket();
+            }
+        }
+        
+        if(bucket.getNodes().size() > 0) {
+            filledBuckets.add(bucket);
+        }
+        
+        long numGeneratedEdges = 0L;
+        for(Bucket nextBucket : filledBuckets) {
+            long numTriangles = nextBucket.getNodes().get(0).numTriangles;
+            long size = nextBucket.getNodes().size();
+            if(size > 2) {
+                double prob = Math.pow(2.0 * numTriangles / (double) ((size - 1) * (size - 2)), 1 / 3.0);
+                for (int i = 0; i < size; i++) {
+                    for (int j = i + 1; j < size; j++) {
+                        if (random.nextDouble() < prob) {
+                            long tail = nextBucket.getNodes().get(i).nodeId;
+                            long head = nextBucket.getNodes().get(j).nodeId;
+                            writer.write(tail + "\t" + head + "\n");
+                            numGeneratedEdges++;
+                        }
+                    }
+                }
+            }
+        }
+        return numGeneratedEdges;
+        
+    }
     public long getNumCommunities() {
         return numCommunities;
+    }
+    
+    public Map<Integer, Long> getCounts() {
+        return counts;
     }
 }
